--- a/workshops/workshop3/CNN_tutorial.ipynb
+++ b/workshops/workshop3/CNN_tutorial.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 462,
+      "execution_count": 175,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 463,
+      "execution_count": 176,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 464,
+      "execution_count": 177,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -91,11 +91,25 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:22:47.529497: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Train sample:  60000\n",
             "Test sample:  10000\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:22:48.093822: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
           ]
         }
       ],
@@ -119,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 465,
+      "execution_count": 178,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -188,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 466,
+      "execution_count": 179,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -248,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 467,
+      "execution_count": 180,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -301,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 468,
+      "execution_count": 181,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -384,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 469,
+      "execution_count": 182,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -430,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 470,
+      "execution_count": 183,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -504,7 +518,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 471,
+      "execution_count": 184,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -558,7 +572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 472,
+      "execution_count": 185,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -631,7 +645,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 473,
+      "execution_count": 186,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -704,7 +718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 474,
+      "execution_count": 187,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -764,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 475,
+      "execution_count": 188,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -803,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 476,
+      "execution_count": 189,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -829,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 477,
+      "execution_count": 190,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -883,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 478,
+      "execution_count": 191,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -893,10 +907,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x31b62fd60>"
+              "<matplotlib.image.AxesImage at 0x17ffaf0a0>"
             ]
           },
-          "execution_count": 478,
+          "execution_count": 191,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -932,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 479,
+      "execution_count": 192,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -968,7 +982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 480,
+      "execution_count": 193,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1020,7 +1034,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 481,
+      "execution_count": 194,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1055,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 482,
+      "execution_count": 195,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1097,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 483,
+      "execution_count": 196,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1132,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 484,
+      "execution_count": 197,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1142,10 +1156,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x3219f6f80>"
+              "<matplotlib.image.AxesImage at 0x145873ca0>"
             ]
           },
-          "execution_count": 484,
+          "execution_count": 197,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1187,7 +1201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 485,
+      "execution_count": 198,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1222,7 +1236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 486,
+      "execution_count": 199,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1232,10 +1246,10 @@
         {
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(1, 1, 1, 2), dtype=float64, numpy=array([[[[ 7., 12.]]]])>"
+              "<tf.Tensor: shape=(1, 1, 1, 2), dtype=float64, numpy=array([[[[13., 14.]]]])>"
             ]
           },
-          "execution_count": 486,
+          "execution_count": 199,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1263,7 +1277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 487,
+      "execution_count": 200,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1273,10 +1287,10 @@
         {
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(1, 1, 1, 2), dtype=float64, numpy=array([[[[ 7., 12.]]]])>"
+              "<tf.Tensor: shape=(1, 1, 1, 2), dtype=float64, numpy=array([[[[13., 14.]]]])>"
             ]
           },
-          "execution_count": 487,
+          "execution_count": 200,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1297,7 +1311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 488,
+      "execution_count": 201,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1308,7 +1322,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[[[19.6076691630046 -55.2036273029308]]]]\n"
+            "[[[[-66.845825750670485 11.700667863765851]]]]\n"
           ]
         }
       ],
@@ -1338,7 +1352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 489,
+      "execution_count": 202,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1349,7 +1363,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[[[19.6076691630046 0]]]]\n"
+            "[[[[0 11.700667863765851]]]]\n"
           ]
         }
       ],
@@ -1380,7 +1394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 490,
+      "execution_count": 203,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1408,7 +1422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 491,
+      "execution_count": 204,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1420,7 +1434,7 @@
           "output_type": "stream",
           "text": [
             "out: \n",
-            "[[[[1.00000000e+00 2.94644674e-18 3.85853452e-17]]]]\n"
+            "[[[[9.99900681e-01 9.69226017e-05 2.39624706e-06]]]]\n"
           ]
         }
       ],
@@ -1451,7 +1465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 492,
+      "execution_count": 205,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1461,7 +1475,7 @@
       "source": [
         "def cross_entropy_loss(y_true, y_pred):\n",
         "    y_true = tf.reshape(y_true, tf.shape(y_pred))\n",
-        "    return tf.reduce_mean(tf.losses.categorical_crossentropy( y_true,  y_pred))\n"
+        "    return tf.reduce_mean(tf.losses.categorical_crossentropy( y_true,  y_pred))"
       ]
     },
     {
@@ -1486,7 +1500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 493,
+      "execution_count": 206,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1524,7 +1538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 494,
+      "execution_count": 207,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1568,7 +1582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 495,
+      "execution_count": 208,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1590,7 +1604,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 496,
+      "execution_count": null,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1599,26 +1613,144 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:23:18.910206: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "epoch:  0 , loss: tf.Tensor(1.4477549, shape=(), dtype=float32)\n",
-            "epoch:  1 , loss: tf.Tensor(0.8737971, shape=(), dtype=float32)\n",
-            "epoch:  2 , loss: tf.Tensor(0.00071481895, shape=(), dtype=float32)\n",
-            "epoch:  3 , loss: tf.Tensor(3.6227385e-07, shape=(), dtype=float32)\n",
-            "epoch:  4 , loss: tf.Tensor(8.1495855e-08, shape=(), dtype=float32)\n",
-            "epoch:  5 , loss: tf.Tensor(1.4290916e-07, shape=(), dtype=float32)\n",
-            "epoch:  6 , loss: tf.Tensor(2.3464041e-08, shape=(), dtype=float32)\n",
-            "epoch:  7 , loss: tf.Tensor(1.2561995e-08, shape=(), dtype=float32)\n",
-            "epoch:  8 , loss: tf.Tensor(1.2017972e-08, shape=(), dtype=float32)\n",
-            "epoch:  9 , loss: tf.Tensor(1.1952201e-08, shape=(), dtype=float32)\n"
+            "epoch:  0 , loss: tf.Tensor(1.4563644, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:23:45.834302: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  1 , loss: tf.Tensor(1.6064882, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:24:19.034134: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  2 , loss: tf.Tensor(0.00024617638, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:24:47.943032: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  3 , loss: tf.Tensor(1.0618438e-06, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:25:20.414866: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  4 , loss: tf.Tensor(6.099286e-07, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:25:51.167231: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  5 , loss: tf.Tensor(4.359561e-05, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:26:21.335641: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  6 , loss: tf.Tensor(1.8291118e-08, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:26:49.330482: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  7 , loss: tf.Tensor(1.1972207e-08, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:27:19.066266: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch:  8 , loss: tf.Tensor(1.36232075e-08, shape=(), dtype=float32)\n",
+            "epoch:  9 , loss: tf.Tensor(1.2895029e-08, shape=(), dtype=float32)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:27:48.994968: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
           ]
         }
       ],
       "source": [
         "dataset = train.map(\n",
         "    lambda image, label: (tf.image.convert_image_dtype(image, tf.float64), label) \n",
-        ").take(200\n",
+        ").take(5000\n",
         ").batch(10)\n",
         "\n",
         "nepoch = 10\n",
@@ -1643,7 +1775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 497,
+      "execution_count": 211,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1654,26 +1786,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "predicted:4 - true:[2]\n",
-            "predicted:4 - true:[0]\n",
+            "predicted:6 - true:[2]\n",
+            "predicted:6 - true:[0]\n",
             "predicted:4 - true:[4]\n",
-            "predicted:4 - true:[8]\n",
-            "predicted:4 - true:[7]\n",
-            "predicted:4 - true:[6]\n",
-            "predicted:4 - true:[0]\n",
-            "predicted:4 - true:[6]\n",
-            "predicted:4 - true:[3]\n",
-            "predicted:4 - true:[1]\n",
-            "predicted:4 - true:[8]\n",
-            "predicted:4 - true:[0]\n",
-            "predicted:4 - true:[7]\n",
+            "predicted:1 - true:[8]\n",
+            "predicted:8 - true:[7]\n",
+            "predicted:8 - true:[6]\n",
+            "predicted:6 - true:[0]\n",
+            "predicted:1 - true:[6]\n",
+            "predicted:6 - true:[3]\n",
+            "predicted:1 - true:[1]\n",
+            "predicted:8 - true:[8]\n",
+            "predicted:6 - true:[0]\n",
+            "predicted:6 - true:[7]\n",
             "predicted:4 - true:[9]\n",
             "predicted:4 - true:[8]\n",
             "predicted:4 - true:[4]\n",
-            "predicted:4 - true:[5]\n",
-            "predicted:4 - true:[3]\n",
+            "predicted:1 - true:[5]\n",
+            "predicted:1 - true:[3]\n",
             "predicted:4 - true:[4]\n",
-            "predicted:4 - true:[0]\n"
+            "predicted:1 - true:[0]\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-02-17 15:28:05.077181: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
           ]
         }
       ],
