--- a/workshops/workshop3/CNN_tutorial.ipynb
+++ b/workshops/workshop3/CNN_tutorial.ipynb
@@ -1775,7 +1775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": null,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -1827,7 +1827,7 @@
         "    pred = model(image)\n",
         "    pred = tf.reshape(pred, 10)\n",
         "    pred_label = tf.argmax(pred)\n",
-        "    tf.print(f'predicted:{pred_label} - true:{label}')\n",
+        "    tf.print(f'predicted:[{pred_label}] - actual:{label}')\n",
         "    "
       ]
     },
